# evk

./: .gitignore  CMakeLists.txt  README.md  evk.code-workspace  make.bat
examples/bindless_texture/: main.cpp  shader.h  shader.slang  shaders.h
examples/bug/: main.cpp
examples/experiments/: main.cpp  shader.spv  shaders.h  triangle.comp
examples/headless_ray_query_triangle/: main.cpp  shaders.h  triangle.comp
examples/imgui_rasterizer_triangle/: main.cpp
examples/rasterizer_triangle/: main.cpp
examples/ray_query_triangle/: main.cpp  shader.h  shader.slang  triangle.comp
src/: core.cpp  core.cppm  evk.cppm  imgui_backend.cpp  imgui_backend.cppm  imgui_backend_shaders.slang  no_std_vulkan.cppm  rt.cpp  rt.cppm  utils.cpp  utils.cppm
